k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasklist-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tasklist-api
  template:
    metadata:
      labels:
        app: tasklist-api
    spec:
      containers:
        - name: tasklist-api
          image:  obioma.azurecr.io/tasklist-api:latest 
          ports:
            - containerPort: 8000
