k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasklist-api-service
spec:
  selector:
    app: tasklist-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
