k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasklist-ingress
  namespace: default  # Change if using a different namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: tasklist.52.249.236.252.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tasklist-api
            port:
              number: 80
